--- a/index.html
+++ b/index.html
@@ -2,57 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Nick Butzler</h1>
-        </div>
-    </header>
+    <header>
+        <div class="container">
+            <h1>Nick Butzler</h1>
+        </div>
+    </header>
 
-    <nav>
-        <div class="container">
-            <ul>
-                <li><a href="index.html">Homepage</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="https://www.linkedin.com/in/nick-butzler-27878a1ba/" target="_blank">Linkedin</a></li>
-            </ul>
-        </div>
-    </nav>
+    <nav>
+        <div class="container">
+            <ul>
+                <li><a href="index.html">Homepage</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="https://www.linkedin.com/in/nick-butzler-27878a1ba/" target="_blank">Linkedin</a></li>
+                <li><a href="https://github.com/Nick-Butzler" target="_blank">Github</a></li>
+            </ul>
+        </div>
+    </nav>
 
-    <main>
-        <div class="container">
-            <img src="https://github.com/Nick-Butzler/Nbutzler_HW8/raw/First-Development/07ADD147-26CF-42FC-B1A7-100E07518DFC.jpg" alt="Me!">
-        </div>
-        <div class="container">
-            <section>
-                <h2>Favorite Quotes</h2>
-                <ul>
-                    <li>"Dream as if you'll live forever. Live as if you'll die today." — James Dean</li>
-                    <li>"Success is not about being the best. It's about being better than you were yesterday." - Andrew Tate</li>
-                    <li>"Don't count the days, make the days count." — Muhammad Ali</li>
+    <main>
+        <div class="container">
+            <img src="https://github.com/Nick-Butzler/Nbutzler_HW8/raw/First-Development/07ADD147-26CF-42FC-B1A7-100E07518DFC.jpg" alt="Me!">
+        </div>
+        <div class="container">
+            <section>
+                <h2>Favorite Quotes</h2>
+                <ul>
+                    <li>"Dream as if you'll live forever. Live as if you'll die today." — James Dean</li>
+                    <li>"Success is not about being the best. It's about being better than you were yesterday." - Andrew Tate</li>
+                    <li>"Don't count the days, make the days count." — Muhammad Ali</li>
                 </ul>
-            </section>
-            <section>
-                <h2>Interests</h2>
-                <ul>
-                    <li>Hockey</li>
-                    <li>Football</li>
-                    <li>Stocks</li>
-                    <li>Guitar</li>
+            </section>
+            <section>
+                <h2>Interests</h2>
+                <ul>
+                    <li>Hockey</li>
+                    <li>Football</li>
+                    <li>Stocks</li>
+                    <li>Guitar</li>
                     <li>Traveling</li>
-                </ul>
-            </section>
-        </div>
-    </main>
+                </ul>
+            </section>
+        </div>
+    </main>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Nick Butzler</p>
-        </div>
-    </footer>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Nick Butzler</p>
+        </div>
+    </footer>
 </body>
 </html>
