--- a/about.html
+++ b/about.html
@@ -1,64 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About</title>
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Nick Butzler</h1>
-        </div>
-    </header>
+    <header>
+        <div class="container">
+            <h1>Nick Butzler</h1>
+        </div>
+    </header>
 
-    <nav>
-        <div class="container">
-            <ul>
-                <li><a href="index.html">Homepage</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="https://www.linkedin.com/in/nick-butzler-27878a1ba/" target="_blank">Linkedin</a></li>
-            </ul>
-        </div>
-    </nav>
+    <nav>
+        <div class="container">
+            <ul>
+                <li><a href="index.html">Homepage</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="https://www.linkedin.com/in/nick-butzler-27878a1ba/" target="_blank">Linkedin</a></li>
+                <li><a href="https://github.com/Nick-Butzler" target="_blank">Github</a></li>
+            </ul>
+        </div>
+    </nav>
 
-    <main>
-        <div class="container">
-             <img src="https://github.com/Nick-Butzler/Nbutzler_HW8/raw/First-Development/kinnick23950.jpg" alt="Go Hawkeyes!">
-        </div>
-        <div class="container">
-            <section>
-                <h2>About me</h2>
-                <p>I am a driven business administration graduate from The University of Iowa, specializing in Business Analytics and Information Systems. With internship experience in data entry and a background in construction management, I possess a solid foundation in data analysis and project coordination. My proactive approach, coupled with technical proficiency in tools like Azure and Tableau, enables me to tackle challenges effectively and contribute meaningfully to any team.</p>
-            </section>
-            <section>
-                <h2>Experience</h2>
-                <table>
-                    <tr>
-                        <th>Year</th>
-                        <th>Position</th>
+    <main>
+        <div class="container">
+            <img src="https://github.com/Nick-Butzler/Nbutzler_HW8/raw/First-Development/kinnick23950.jpg" alt="Go Hawkeyes!">
+        </div>
+        <div class="container">
+            <section>
+                <h2>About me</h2>
+                <p>I am a driven business administration graduate from The University of Iowa, specializing in Business Analytics and Information Systems. With internship experience in data entry and a background in construction management, I possess a solid foundation in data analysis and project coordination. My proactive approach, coupled with technical proficiency in tools like Azure and Tableau, enables me to tackle challenges effectively and contribute meaningfully to any team.</p>
+            </section>
+            <section>
+                <h2>Experience</h2>
+                <table>
+                    <tr>
+                        <th>Year</th>
+                        <th>Position</th>
                         <th>Company</th>
-                    </tr>
-                    <tr>
-                        <td>2022-2022</td>
-                        <td>Data Entry Intern</td>
+                    </tr>
+                    <tr>
+                        <td>2022-2022</td>
+                        <td>Data Entry Intern</td>
                         <td>REM Corporation</td>
-                    </tr>
-                    <tr>
-                        <td>2021-2021</td>
-                        <td>Construction Manager</td>
+                    </tr>
+                    <tr>
+                        <td>2021-2021</td>
+                        <td>Construction Manager</td>
                         <td>Blue Peak Tents</td>
-                    </tr>
-                </table>
-            </section>
-        </div>
-    </main>
+                    </tr>
+                </table>
+            </section>
+        </div>
+    </main>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Nick Butzler</p>
-        </div>
-    </footer>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Nick Butzler</p>
+        </div>
+    </footer>
 </body>
 </html>
+
